@@ -1,6 +1,6 @@
 #
-# $Id: VERSION,v 1.31 2011/05/10 21:55:10 reubenhwk Exp $
+# $Id: VERSION,v 1.32.2.1 2011/08/22 12:32:42 reubenhwk Exp $
 #
 # this file is automatically processed by configure
 #
-1.8
+1.8.1
